Modificaciones al aplication.properties

--- a/spring-boot-reto/src/main/resources/application.properties
+++ b/spring-boot-reto/src/main/resources/application.properties
@@ -1,8 +1,14 @@
+#Local
 spring.datasource.url=jdbc:postgresql://localhost:5432/retodb
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.show-sql=true
-#Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#Hibernate ddl auto(create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
+#prod
+#server.port=5000
+#spring.datasource.url=jdbc:postgresql://awsdbreto.cwrqmeohjf7o.us-east-2.rds.amazonaws.com:5432/retodb
+#spring.datasource.username=postgres
+#spring.datasource.password=rootroot
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=update
